# 제리/routes/reviews.route.js
@@ -1,8 +1,10 @@
 import express from 'express';
 import asyncHandler from 'express-async-handler';
 
-import { addReview } from '../controllers/reviews.controller.js';
+import { addReview, fetchStoreReviews, fetchUserReviews } from '../controllers/reviews.controller.js';
 
 export const reviewsRouter = express.Router();
 
 reviewsRouter.post('/', asyncHandler(addReview));
+reviewsRouter.get('/stores/:storeId', asyncHandler(fetchStoreReviews));
+reviewsRouter.get('/users/:userId', asyncHandler(fetchUserReviews));
