# 제리/swagger/reviews.swagger.yaml
@@ -88,6 +88,138 @@ paths:
                             message:
                                 type: string
                                 example: '서버 에러, 관리자에게 문의 바랍니다.'
+    /reviews/stores/{storeId}:
+        get:
+            summary: '특정 가게 리뷰 조회'
+            parameters:
+                - in: path
+                  name: storeId
+                  required: true
+                  type: integer
+                - in: query
+                  name: userId
+                  required: false
+                  type: integer
+                - in: query
+                  name: missionId
+                  required: false
+                  type: integer
+                - in: query
+                  name: limit
+                  required: false
+                  type: integer
+            responses:
+                '200':
+                    description: '리뷰 조회 성공!'
+                    schema:
+                        type: object
+                        properties:
+                            isSuccess:
+                                type: boolean
+                                example: true
+                            code:
+                                type: integer
+                                example: 2000
+                            message:
+                                type: string
+                                example: 'success!'
+                            result:
+                                type: object
+                                example:
+                                    [
+                                        {
+                                            'user_name': '홍길동',
+                                            'created_at': '2023.12.03',
+                                            'rating': 5,
+                                            'content': '매우 맛있어요',
+                                        },
+                                        {
+                                            'user_name': '고길동',
+                                            'created_at': '2023.12.01',
+                                            'rating': 4,
+                                            'content': '맛있어요',
+                                        },
+                                    ]
+                '500':
+                    description: '서버 에러'
+                    schema:
+                        type: object
+                        properties:
+                            isSuccess:
+                                type: boolean
+                                example: false
+                            code:
+                                type: integer
+                                example: 'COMMON000'
+                            message:
+                                type: string
+                                example: '서버 에러, 관리자에게 문의 바랍니다.'
+    /reviews/users/{userId}:
+        get:
+            summary: '내가 작성한 리뷰 조회'
+            parameters:
+                - in: path
+                  name: userId
+                  required: true
+                  type: integer
+                - in: query
+                  name: storeId
+                  required: false
+                  type: integer
+                - in: query
+                  name: missionId
+                  required: false
+                  type: integer
+                - in: query
+                  name: limit
+                  required: false
+                  type: integer
+            responses:
+                '200':
+                    description: '리뷰 조회 성공!'
+                    schema:
+                        type: object
+                        properties:
+                            isSuccess:
+                                type: boolean
+                                example: true
+                            code:
+                                type: integer
+                                example: 2000
+                            message:
+                                type: string
+                                example: 'success!'
+                            result:
+                                type: object
+                                example:
+                                    [
+                                        {
+                                            'user_name': '홍길동',
+                                            'created_at': '2023.12.03',
+                                            'rating': 5,
+                                            'content': '매우 맛있어요',
+                                        },
+                                        {
+                                            'user_name': '홍길동',
+                                            'created_at': '2023.12.02',
+                                            'rating': 4,
+                                            'content': '맛있어요',
+                                        },
+                                    ]
+                '500':
+                    description: '서버 에러'
+                    schema:
+                        type: object
+                        properties:
+                            isSuccess:
+                                type: boolean
+                                example: false
+                            code:
+                                type: integer
+                                example: 'COMMON000'
+                            message:
+                                type: string
+                                example: '서버 에러, 관리자에게 문의 바랍니다.'
 definitions:
     Review:
         properties:
